2009-12-23  Matevz Tadel  <matevz.tadel@ijs.si>

	Allow all extentios to be blown up.

	* Glasses/TringuCam.cxx:
	* Glasses/TringuCam.h:
	Replace DynoExplode() with ExtendioExplode() - now all extendios
	can be blown up.
	Replace StatoDetails() and DynoDetails() with common ExtendioDetails().

2009-12-23  Matevz Tadel  <matevz.tadel@ijs.si>

	Make proper lens-overlay-menu composition by following class hierarchy.

	* Glasses/TSPupilInfo.cxx:
	* Glasses/TSPupilInfo.h:
	Add memeber SGridStepper.
	Add method SelectTopMenuForLens(). This traverses the class
	hierarchy towards parent-class and assembles the full menu for
	given lens.

	* Glasses/TringuCam.cxx:
	Remove includes for Crawler, Flyer and LandMark and some silly
	code that was needed for menu handling.

2009-12-23  Matevz Tadel  <matevz.tadel@ijs.si>

	Improve handling and fix rendering of tubes.

	* Glasses/Tringula.cxx:
	* Glasses/Tringula.h:
	Add link to list of tubes. Before they were normal children.
	Call TimeTick() on tubes directly.

	* Glasses/TringuCam.cxx:
	Add tubes to the tube-list.

	* Rnr/GL/TringuRep_GL_Rnr.cxx:
	Redner tubes, too.

2009-12-22  Matevz Tadel  <matevz.tadel@ijs.si>

	Major update of Tringula rendering / management.

	* Glasses/CrawlerSpiritio.cxx:
	Attach to TringuRep on activation -- Tringula is not in render
	path anymore.

	* Glasses/TSPupilInfo.cxx:
	* Glasses/TSPupilInfo.h:
	Add link to TringuRep.

	* Glasses/TriMesh.cxx:
	* Glasses/TriMesh.h:
	Add abstract interace TriMeshColorArraySource.
	Subclass from it.
	Allow external color-array-source to be passed into
	ColorBySomeTerrainProp(). These should really go to TriMeshField.

	* Glasses/TriMeshField.cxx:
	* Glasses/TriMeshField.h:
	* Glasses/TriMeshLightField.cxx:
	* Glasses/TriMeshLightField.h:
	Add link to ZGlass that plays the role of TriMeshColorArraySource.
	Use it when colorizing/modulating color arrays.
	Beautify most of the code.

	* Glasses/TringuCam.cxx:
	* Glasses/TringuCam.h: